# PoCemon

./: .gitignore  CMakeLists.txt  main.c
assets/map/map_main/: map.tmx
assets/map/map_test/: Terrain.tsx  pokemap-generated.tmx  pokemap.tmx
db/: pocemon_database.sql  pocemon_database.sqlite
src/: character.c  database.c  game.c  gif.c  map.c  pokemon.c  screen.c  text.c
src/includes/: character.h  database.h  game.h  gif.h  map.h  pokemon.h  screen.h  text.h
